# challenge

./: .dockerignore  .env.sample  Procfile  Readme.md  docker-compose.yml  pyproject.toml  run.sh
apps/fake_data/: admin.py  apps.py  column_generator.py  models.py  tasks.py  urls.py  views.py
apps/fake_data/migrations/: 0001_initial.py
config/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
static/assets/css/: dataset.css  login.css
static/assets/js/: schema.js
templates/fake_data/: dataset_list.html  schema_create.html  schema_list.html  schema_update.html  schemas.html
templates/includes/: errors.html  links.html  navbar.html  scripts.html
templates/layouts/: base.html
templates/registration/: login.html
