[tool.poetry]
name = "challenge"
version = "0.1.0"
description = "Online service for generating CSV files with fake(dummy) data using Python and Django"
authors = ["Aleksandr <amvorobei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
celery = "^5.2.7"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
python-decouple = "^3.6"
gunicorn = "^20.1.0"
Faker = "^13.13.0"
whitenoise = "^6.2.0"
redis = "^4.3.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.961"
django-debug-toolbar = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
